# TravellerProblem

./: .gitignore
EC/BetterEvolutiveComputing/: README.md
EC/BetterEvolutiveComputing/scripts/: runRandom.sh  runRandom_toTerminal.sh
EC/BetterEvolutiveComputing/src/: Population.cpp  Population.hpp  ProblemManager.cpp  ProblemManager.hpp  RandomGanerator.cpp  SolutionHelper.cpp  SolutionHelper.h  main.cpp
EC/evolutiveComputing/scripts/: run.sh  runAllTests.sh  runRandom.sh
EC/evolutiveComputing/src/: CMakeLists.txt  FileParser.cpp  Population.cpp  ProblemManager.hpp  RandomGanerator.h  Solution.cpp  main.cpp
FB/firstBest/: README.md
FB/firstBest/scripts/: compile.sh  run.sh  runAux.sh  runRandom.sh  runValgrind.sh  valgrind.sh
FB/firstBest/src/: CMakeLists.txt  FileParser.h  ProblemManager.cpp  Solution.cpp  Solution.h
SA/betterSimulatedAnnealing/: EXPLICACION_MEJORAS.md
SA/betterSimulatedAnnealing/scripts/: runRandom.sh
SA/betterSimulatedAnnealing/src/: DistanceMatrixWrapper.h  ListOfNeighbours.cpp  ListOfNeighbours.hpp  ProblemManager.cpp  ProblemManager.hpp  Solution.cpp  SolutionHelper.cpp
SA/simulatedAnnealing/: README.md
SA/simulatedAnnealing/scripts/: compile.sh  runRandom.sh
SA/simulatedAnnealing/src/: CMakeLists.txt  Solution.cpp  Solution.h  SolutionHelper.cpp  main.cpp
TS/betterTabuSearch/: README.md
TS/betterTabuSearch/src/: CMakeLists.txt  DistanceMatrixWrapper.cpp  DistanceMatrixWrapper.h  LowerTriangularMatrix.h  ProblemManager.cpp  ProblemManager.hpp  Solution.h  SolutionHelper.cpp  TabuList.cpp  TabuList.hpp
TS/tabuSearch/: README.md
TS/tabuSearch/scripts/: run.sh  runRandom.sh  runTest.sh
TS/tabuSearch/src/: FileParser.cpp  LowerTriangularMatrix.h  ProblemManager.cpp  RandomGanerator.h  Solution.h  TabuList.cpp  main.cpp
betterSimulatedAnnealing/: EXPLICACION_MEJORAS.md
betterSimulatedAnnealing/scripts/: run.sh
betterSimulatedAnnealing/src/: CMakeLists.txt  DistanceMatrixWrapper.cpp  DistanceMatrixWrapper.h  PairList.cpp  ProblemManager.cpp  ProblemManager.hpp  RandomGanerator.cpp  Solution.cpp  Solution.h
betterTabuSearch/: README.md
betterTabuSearch/scripts/: run.sh  runToTerminal.sh  runValgrind.sh
betterTabuSearch/src/: CMakeLists.txt  DistanceMatrixWrapper.cpp  DistanceMatrixWrapper.h  FileParser.cpp  LowerTriangularMatrix.h  ProblemManager.cpp  ProblemManager.hpp  RandomGanerator.cpp  Solution.cpp  Solution.h  SolutionHelper.cpp  SolutionHelper.h  TabuList.cpp  TabuList.hpp  main.cpp
evolutiveComputing/scripts/: run.sh
evolutiveComputing/src/: CMakeLists.txt  FileParser.h  PairList.hpp  Population.cpp  Population.hpp  ProblemManager.cpp  ProblemManager.hpp  RandomGanerator.cpp  RandomGanerator.h  Solution.cpp  Solution.h  SolutionHelper.cpp  main.cpp
firstBest/src/: CMakeLists.txt  DistanceFileParser.cpp  DistanceFileParser.h  ProblemManager.cpp  ProblemManager.hpp  RandomGanerator.cpp  RandomGanerator.h  Solution.cpp  main.cpp
simulatedAnnealing/: ComentarioSobreMejoras_NOT_UPDATED.md  README.md
simulatedAnnealing/scripts/: runAllTests.sh
simulatedAnnealing/scripts_NOT_UPDATED/: runAllTests.sh
simulatedAnnealing/src/: CMakeLists.txt  DistanceMatrixWrapper.cpp  FileParser.cpp  FileParser.h  LowerTriangularMatrix.h  ProblemManager.cpp  ProblemManager.hpp  RandomGanerator.cpp  RandomGanerator.h  Solution.cpp  Solution.h  SolutionHelper.cpp  SolutionHelper.h  main.cpp
tabuSearch/scripts/: compile.sh.save  run.sh  runAllTests.sh  runValgrind.sh  salidaVal.txt
tabuSearch/src/: CMakeLists.txt  FileParser.cpp  LowerTriangularMatrix.h  ProblemHelper.c  ProblemHelper.h  ProblemManager.cpp  ProblemManager.hpp  RandomGanerator.cpp  Solution.cpp  Solution.h  TabuList.cpp  TabuList.hpp  main.cpp
(+1 files in other folders)
